# TeOng

./: CMakeLists.txt  main.cpp
Pong/: Ball.cpp  Ball.h  Pong.cpp  Pong.h  PongAI.cpp  PongAI.h  Racket.cpp  Racket.h
Schach/: Schach.cpp  Schach.h
Tetris/: Stones.cpp  Stones.h  Tetris.cpp  Tetris.h
chess/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  chess.cpp  chess.h
chess/Pieces/: Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
